# getmyancestors

./: pyproject.toml
getmyancestors/: getmyancestors.py
getmyancestors/classes/: session.py
